# axum-static-s3

./: .clippy.toml  Cargo.toml  README.md
src/: adapter.rs  builder.rs  lib.rs
